2026-01-27  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Switch to actions/checkout@v6

2026-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.26

	* inst/include/RcppSpdlog: Under C++20 or later, switch to
	SPDLOG_USE_STD_FORMAT (unless opted-out), avoiding CRAN nag

2026-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.25

2026-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppSpdlog: Add two '#undef' to avoid compilation noise

2026-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.24

2026-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: New upstream release spdlog 1.17.0 (which
	includes fmt 12.1.0)

2025-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* docs/*: Refreshed with ChangeLog years tweak

2025-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* docs/*: Refreshed with syntax highlighting enabled

2025-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* docs/*: Refreshed under updated altdoc

2025-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.23

	* inst/include/spdlog/*: New upstream release spdlog 1.16.0 (which
	includes fmt 12.0)

	* docs/: Regenerated using altdoc with mkdocs-material
	* .github/altdoc: Added and customized

2025-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Use r-ci action with embedded bootstrap

2025-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.22

	* inst/include/spdlog/*: New upstream release spdlog 1.15.3 (which
	includes fmt 11.2.0)

2025-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.21

	* inst/include/spdlog/*: New upstream release spdlog 1.15.2 (which
	includes fmt 11.1.4)

2025-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.20
