@@ -15,13 +15,15 @@ extern "C" {
 
 // under C++20 now default to using FMT (as CRAN was nagging)
 // but also provide an opt-out
-#if __cplusplus >= 202002L
-  #if !defined(RCPPSPDLOG_DO_NOT_USE_FMT)
-     #if !defined(SPDLOG_USE_STD_FORMAT)
-        #define SPDLOG_USE_STD_FORMAT 1
-     #endif
-  #endif
-#endif
+// NB Use of std::format created issues seen in Feb 2026 when R-devel switched
+//    So we are parking this for now until this has been sorted out and will stick with fmt
+// #if __cplusplus >= 202002L
+//   #if !defined(RCPPSPDLOG_DO_NOT_USE_FMT)
+//      #if !defined(SPDLOG_USE_STD_FORMAT)
+//         #define SPDLOG_USE_STD_FORMAT 1
+//      #endif
+//   #endif
+// #endif
 
 // include main header for spdlog -- others headers needed for extra features
 #include "spdlog/spdlog.h"
