@@ -1,3 +1,10 @@
+2026-02-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll micro release version
+
+	* inst/include/RcppSpdlog: Disallow use of std::format under C++20;
+	intended to be temporary while a better solutions is worked out
+
 2026-01-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml: Switch to actions/checkout@v6
